--- a/Scripts/Models/MilkSpun.ChunkWorld.Models.asmdef
+++ b/Scripts/Models/MilkSpun.ChunkWorld.Models.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "MilkSpun.ChunkWorld.Models",
     "rootNamespace": "MilkSpun.ChunkWorld.Models",
-    "references": [],
+    "references": [
+        "GUID:c9127852cc37547ca8ee75ade2bd4328"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
